--- a/teacher/templates/teacher/base.html
+++ b/teacher/templates/teacher/base.html
@@ -9,8 +9,8 @@
         <a href="/teacher">登校表示</a>
         <a href="/teacher/edit">登録状況</a>
         <a href="/teacher/holiday">休日設定</a>
-        <a href="/teacher/changepass">パスワードの変更</a>
-        <a href="/teacher/logout">ログアウト</a>
+        <a href="{% url 'login:password_change' %}">パスワード変更</a>
+        <a href="{% url 'login:logout' %}">ログアウト</a>
 </header>
 
 {% endblock %}
