--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -8,12 +8,11 @@
     <div class="dropdown" id="dropdownMenu">
         <a href="{% url 'manager_home' %}">登校状況確認</a>
         <a href="{% url 'student_management' %}">生徒情報確認</a>
-        <a href="//">生徒の追加</a>
+        <a href="//">生徒の追加・削除</a>
         <a href="{% url 'teacher_management' %}">先生情報確認</a>
-        <a href="//">先生の追加</a>
-        <a href="//">先生の削除</a>
-        <a href="log/">ログ確認</a>
-        <a href="/logout/">ログアウト</a>
+        <a href="//">先生の追加・削除</a>
+        <a href="{% url 'log' %}">ログ確認</a>
+        <a href="{% url 'login:logout' %}">ログアウト</a>
 </header>
 
 {% endblock %}
