--- a/student/static/css/index.css
+++ b/student/static/css/index.css
@@ -72,3 +72,29 @@ body {
 .button:hover {
     opacity: 0.8;
 }
+
+.messages-container {
+    margin: 15px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.messages-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.messages-container li {
+    padding: 8px;
+    background-color: #e0f7fa; /* 薄い青の背景 */
+    border-left: 4px solid #26c6da; /* 薄い青緑の縦線 */
+    margin-bottom: 10px;
+}
+
+.messages-container li:last-child {
+    margin-bottom: 0;
+}
