--- a/login/templates/login/logout.html
+++ b/login/templates/login/logout.html
@@ -1,4 +1,4 @@
-{% extends "student/base.html" %}
+{% extends base_template %}
 {% load static %}
 {% block contents %}
 <link rel="stylesheet" href="{% static 'css/logout.css' %}">
