--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -1,7 +1,7 @@
 {% extends "student/base.html" %}
 {% load static %}
 {% block contents %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.cs' %}">
 
 <!-- 現在の日付を表示 -->
 <div class="current-date">
