--- a/teacher/templates/teacher/base.html
+++ b/teacher/templates/teacher/base.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <body>
-{% block teacher_header %}
 <header>
     <div class="logo">生徒管理アプリ</div>
     <div class="menu-icon" onclick="toggleDropdown()">☰</div>
     <div class="dropdown" id="dropdownMenu">
         <a href="/teacher">登校表示</a>
-        <a href="/teacher/holiday">登校状況</a>
+        <a href="{% url 'teacher:edit' %}">登校状況</a>
         <a href="{% url 'teacher:calendar_list' year=year month=month %}">休日設定</a>
         <a href="{% url 'login:password_change' %}">パスワード変更</a>
         <a href="{% url 'login:logout' %}">ログアウト</a>
 </header>
-
-{% endblock %}
 {% block contents %}{% endblock %}
 </body>
 </html>
