--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -6,12 +6,11 @@
     <div class="logo">生徒管理アプリ</div>
     <div class="menu-icon" onclick="toggleDropdown()">☰</div>
     <div class="dropdown" id="dropdownMenu">
-        <a href="{% url 'manager_home' %}">登校状況確認</a>
-        <a href="{% url 'student_management' %}">生徒情報確認</a>
-        <a href="//">生徒の追加・削除</a>
-        <a href="{% url 'teacher_management' %}">先生情報確認</a>
-        <a href="//">先生の追加・削除</a>
-        <a href="{% url 'log' %}">ログ確認</a>
+        <a href="{% url 'manager:manager_home' %}">登校状況確認</a>
+        <a href="{% url 'manager:student_management' %}">生徒情報確認</a>
+        <a href="{% url 'manager:student_add' %}">生徒の追加・削除</a>
+        <a href="{% url 'manager:teacher_management' %}">先生情報確認</a>
+        <a href="{% url 'manager:teacher_add' %}">先生の追加・削除</a>
         <a href="{% url 'login:logout' %}">ログアウト</a>
 </header>
 
