--- a/teacher/templates/teacher/edit.html
+++ b/teacher/templates/teacher/edit.html
@@ -1,67 +1,34 @@
-{% extends "teacher/base.html" %}
-{% load static %}
-<!DOCTYPE html>
-<html lang="ja">
+{% extends 'teacher/base.html' %}
+
 {% block contents %}
-
-<body>
-
-<h1>生徒の登校状況の確認</h1>
-
-<div class="search-container">
-    <label for="keyword">キーワード：</label>
-    <input type="text" id="keyword" placeholder="学籍番号や名前を検索">
-<h2>2347089:児玉悠善出席確認</h2>
-</div>
-<div class="container">
-
-    <div class="tabs">
-        <button onclick="filterPeriod('week')">過去一週間</button>
-        <button onclick="filterPeriod('month')">過去一ヶ月</button>
-        <button onclick="filterPeriod('year')">過去一年</button>
-    </div>
-
-    <table>
+    <h1>出席一覧</h1>
+    <table border="1">
         <thead>
-            <tr>                         
+            <tr>
+                <th>出席ID</th>
+                <th>生徒</th>
                 <th>日付</th>
+                <th>出席状況</th>
                 <th>登校時間</th>
-                <th>退出時間</th>
-                <th>状況</th>
+                <th>理由</th>
             </tr>
         </thead>
-        <tbody id="attendanceData">
-            <tr> 
-                <td>10-15</td>
-                <td>09:00</td>
-                <td>15:00</td>
-                <td>
-                    <select>
-                        <option value="出席">出席</option>
-                        <option value="遅刻">遅刻</option>
-                        <option value="早退">早退</option>
-                        <option value="欠席">欠席</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>10-16</td>
-                <td>--:--</td>
-                <td>--:--</td>
-                <td>
-                    <select>
-                        <option value="出席">出席</option>
-                        <option value="遅刻">遅刻</option>
-                        <option value="早退">早退</option>
-                        <option value="欠席" selected>欠席</option>
-                    </select>
-                </td>
-            </tr>
+        <tbody>
+            {% for attendance in attendances %}
+                <tr>
+                    <td>{{ attendance.attendance_id }}</td>
+                    <td>{{ attendance.student.username }}</td>  <!-- 生徒のユーザー名を表示 -->
+                    <td>{{ attendance.date.date }}</td>  <!-- カレンダーの日付を表示 -->
+                    <td>{{ attendance.get_status_display }}</td>  <!-- 出席状況（choices）を表示 -->
+                    <td>{{ attendance.attendance_time }}</td>
+                    <td>{{ attendance.reason }}</td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="6">出席データがありません。</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-
-</div>
-
 {% endblock %}
-</body>
-</html>
+
